# IdpProtocol

./: .gitignore  README.md  build-tests.sh  licence.md  meson.build  test.sh
Tests/IdpProtcocol.UnitTests/: CommandManagerTests.cpp  IdpProtcocol.UnitTests.acproj  IdpRouterTests.cpp  TestRuntime.cpp  TestStream.h
Tests/IdpProtocol.UnitTests/: IdpPacketParserTests.cpp  IdpProtocol.UnitTests.acproj  IdpRouterTests.cpp  ReliabilityTests.cpp  TestRuntime.cpp  TestRuntime.h
src/cpp/: DataReceivedEventArgs.cpp  DataReceivedEventArgs.h  IAdaptor.h  IPacketTransmit.h  IdpClientNode.cpp  IdpClientNode.h  IdpCommandManager.cpp  IdpCommandManager.h  IdpNode.cpp  IdpNode.h  IdpPacket.cpp  IdpPacket.h  IdpPacketParser.cpp  IdpPacketParser.h  IdpProtocol2.acproj  IdpResponse.cpp  IdpResponse.h  IdpRouter.cpp  IdpRouter.h  IdpServerNode.cpp  IdpServerNode.h  IdpTransaction.h  IncomingTransaction.cpp  IncomingTransaction.h  MasterNode.cpp  MasterNode.h  NotifyingStreamAdaptor.cpp  NotifyingStreamAdaptor.h  OutgoingTransaction.cpp  OutgoingTransaction.h  SimpleAdaptor.cpp  SimpleAdaptor.h
src/cs/: .gitignore
src/cs/IdpProtocol/: BigEndianBitConverter.cs  ClientNode.cs  CompilerFeatureCompatibility.cs  DoubleConverter.cs  EndianBitConverter.cs  Endianness.cs  IIdpTraceSink.cs  IPacketTransmit.cs  IdpAdaptor.cs  IdpCommandManager.cs  IdpInterface.cs  IdpNode.cs  IdpPacket.cs  IdpParser.cs  IdpProtocol.csproj  IdpResponse.cs  IdpRouter.cs  IdpTracePacket.cs  IdpTrafficDirection.cs  (+9 more)
src/cs/IdpProtocol.Tests/: IdpParserTests.cs  IdpProtocol.Tests.csproj  IdpProtocolReliabilityTests.cs
(+1 files in other folders)
